add some packages

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <body>
-    <a href="/src/home.html">go to home page</a>
-    <a href="/src/about.html">go to about page</a>
+    <div><a href="/src/home.html">go to home page</a></div>
+    <div><a href="/src/about.html">go to about page</a></div>
   </body>
-  <script type="text/javascript" src="./dist/js/bundle.js"></script>
+  <script type="text/javascript" src="./dist/bundle.js"></script>
 </html>
