change the model

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <body>
-    <div><a href="/src/home.html">go to home page</a></div>
-    <div><a href="/src/about.html">go to about page</a></div>
+    <div><a href="src/home/home.html">go to home page</a></div>
+    <div><a href="src/about/about.html">go to about page</a></div>
   </body>
-  <script type="text/javascript" src="./dist/bundle.js"></script>
+  <script type="text/javascript" src="./index.js"></script>
 </html>
