--- a/src/about/about.html
+++ b/src/about/about.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     this is about page
-    <a href="/">back</a>
+    <a id="goBack">back</a>
+    <a id="goBack">back</a>
 </body>
-<script type="text/javascript" src="/dist/bundle2.js"></script>
+<script type="text/javascript" src="/dist/about.js"></script>
+<script>
+    document.getElementById('goBack').onclick = function () {
+        window.history.back();
+    }
+</script>
 </html>
