--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <body>
     <div><a href="src/home/home.html">go to home page</a></div>
     <div><a href="src/about/about.html">go to about page</a></div>
+    <div><a href="src/about/about.html">go to about page</a></div>
   </body>
-  <script type="text/javascript" src="./index.js"></script>
+  <script type="text/javascript" src="./dist/index.js"></script>
 </html>
